--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -32,6 +32,9 @@
               <a class="nav-link" href="{% url 'listar_usuarios' %}" tabindex="-1" aria-disabled="true">Lista de usuarios</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'listar_mensajes' %}" tabindex="-1" aria-disabled="true">Mensajes recibidos</a>
+            </li>
+            <li class="nav-item">
                <a class="nav-link" href="{% url 'admin:index' %}" tabindex="-1" aria-disabled="true">Admin</a>
             </li>
           </ul>
