--- a/templates/administracion/header_administracion.html
+++ b/templates/administracion/header_administracion.html
@@ -29,10 +29,13 @@
               <a class="nav-link" href="{% url 'listar_usuarios' %}" tabindex="-1" aria-disabled="true">Lista de usuarios</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'listar_mensajes' %}" tabindex="-1" aria-disabled="true">Mensajes recibidos</a>
+            </li>
+            <li class="nav-item">
                <a class="nav-link" href="{% url 'admin:index' %}" tabindex="-1" aria-disabled="true">Admin</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'gymadmin:index' %}" tabindex="-1" aria-disabled="true">AdminGym</a>
+              <a class="nav-link" href="{% url 'gymadmin:index' %}" tabindex="-1" aria-disabled="true">Admin GYM</a>
            </li>
           </ul>
           <div class="dropdown text-end">
