--- a/templates/administracion/mensajes_contacto/listar_mensajes.html
+++ b/templates/administracion/mensajes_contacto/listar_mensajes.html
@@ -36,7 +36,7 @@
                     <td>{{ mensaje.asunto }}</td>
                     <td>{{ mensaje.mensaje }}</td>
                     <td>
-                        <a href="#" title="Editar" class="btn btn-warning">Ver<i class="fas fa-trash"></i></a>
+                        <!-- <a href="#" title="Editar" class="btn btn-warning">Ver<i class="fas fa-trash"></i></a> -->
                         <a href="{% url 'eliminar_mensaje' mensaje.id %}" title="Eliminar" class="btn btn-danger">Eliminar<i class="fas fa-trash"></i></a>
                     </td>
                 </tr>
