--- a/templates/administracion/profesor/index.html
+++ b/templates/administracion/profesor/index.html
@@ -64,6 +64,9 @@
 
             </tbody>
         </table>
+        <div>
+            {% include 'administracion/paginator_administracion.html' %}
+        </div>
         {% comment %} <div class="row">
             <div class="col-12">
                 <nav aria-label="Page navigation example">
@@ -80,7 +83,7 @@
         {% endcomment %}
     </div>
     <div class="card-footer text-muted">
-        Footer
+        nuevo
     </div>
 </div>
 
