--- a/templates/administracion/tipo_de_actividad/index.html
+++ b/templates/administracion/tipo_de_actividad/index.html
@@ -35,6 +35,9 @@
 
             </tbody>
         </table>
+        <div>
+            {% include 'administracion/paginator_administracion.html' %}
+        </div>
         {% comment %} <div class="row">
             <div class="col-12">
                 <nav aria-label="Page navigation example">
